--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Money Tracker",
-  "short_name": "MoneyTracker",
+  "name": "Expense Tracker",
+  "short_name": "ExpenseTracker",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
