--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Expense Tracker",
   "short_name": "ExpenseTracker",
-  "start_url": ".",
+  "start_url": "/expense-tracker-web/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
