--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,25 @@
       "sizes": "512x512",
       "type": "image/png"
     }
+  ],
+  "screenshots": [
+    {
+      "src": "screenshots/screen1.png",
+      "sizes": "738x1599",
+      "type": "image/png",
+      "form_factor": "narrow" 
+    },
+    {
+      "src": "screenshots/screen2.png",
+      "sizes": "738x1599",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "screenshots/screen3.png",
+      "sizes": "738x1599",
+      "type": "image/png",
+      "form_factor": "narrow"
+    }
   ]
 }
