--- a/manifest.json
+++ b/manifest.json
@@ -21,21 +21,21 @@
   ],
   "screenshots": [
     {
-      "src": "screenshots/screen1.png",
+      "src": "screenshots/screen1.jpg",
       "sizes": "738x1599",
-      "type": "image/png",
+      "type": "image/jpg",
       "form_factor": "narrow" 
     },
     {
-      "src": "screenshots/screen2.png",
+      "src": "screenshots/screen2.jpg",
       "sizes": "738x1599",
-      "type": "image/png",
+      "type": "image/jpg",
       "form_factor": "narrow"
     },
     {
-      "src": "screenshots/screen3.png",
+      "src": "screenshots/screen3.jpg",
       "sizes": "738x1599",
-      "type": "image/png",
+      "type": "image/jpg",
       "form_factor": "narrow"
     }
   ]
